third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-stable/diagnostic-not-implemented-known-layout.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::KnownLayout` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-known-layout.rs:18:26
   |
18 |     takes_known_layout::<NotZerocopy>();
   |                          ^^^^^^^^^^^ the trait `zerocopy::KnownLayout` is not implemented for `NotZerocopy`
   |
   = note: Consider adding `#[derive(KnownLayout)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::KnownLayout`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             AtomicBool
             AtomicI16
           and $N others
note: required by a bound in `takes_known_layout`
  --> tests/ui-stable/diagnostic-not-implemented-known-layout.rs:21:26
   |
21 | fn takes_known_layout<T: KnownLayout>() {}
   |                          ^^^^^^^^^^^ required by this bound in `takes_known_layout`
